--- a/youtube_intergration_project.ipynb
+++ b/youtube_intergration_project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiBltLSnPDQSoXBK+ZBQ1s",
+      "authorship_tag": "ABX9TyMr45XcrLjCnGNEr7XV3Cbc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,6 @@
         "# Display filtered results\n",
         "for video in filtered_videos:\n",
         "    print(f\"Title: {video['title']}\\nDescription: {video['description']}\\nVideo ID: {video['video_id']}\\n\")\n",
-        "'\n",
         "\n",
         "# Search query and filter keywords\n",
         "SEARCH_QUERY = 'cartoons for kids'\n",
@@ -92,27 +91,64 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
+          "base_uri": "https://localhost:8080/"
         },
         "id": "TJV2bN54aHRt",
-        "outputId": "2cc8f272-00ba-4c26-e76d-62eb07e63ee8"
+        "outputId": "4d67de18-ac4a-49d9-8694-ce1afe74bc1f"
       },
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "unterminated string literal (detected at line 33) (<ipython-input-10-6029780ab45e>, line 33)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-6029780ab45e>\"\u001b[0;36m, line \u001b[0;32m33\u001b[0m\n\u001b[0;31m    '\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 33)\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Title: PAW Patrol Halloween Best Spooky Rescue Episodes - PAW Patrol Cartoons for Kids Compilation\n",
+            "Description: The PAW Patrol are getting into costume to save trick or treaters, Rocky turns into a were-puppy, Rubble finds an alien twin, and ...\n",
+            "Video ID: isFrBq5ni6Q\n",
+            "\n",
+            "Title: Cocomelon Color Train - Wheels on the Train - Baby Nursery Rhymes\n",
+            "Description: Cocomelon Color Train - Wheels on the Train - Baby Nursery Rhymes Hop on board the Cocomelon Color Train and sing along to ...\n",
+            "Video ID: pjslXJZi4EQ\n",
+            "\n",
+            "Title: Chris and Magic Faucet Adventure - Kids toy stories\n",
+            "Description: Chris and Magic Faucet Adventure - Kids toy stories 00:00 Chris and Magic Faucet Adventure - Kids toy stories 05:44 Chris is ...\n",
+            "Video ID: S84fHUZdOGs\n",
+            "\n",
+            "Title: Tom &amp; Jerry | Tom &amp; Jerry in Full Screen | Classic Cartoon Compilation | WB Kids\n",
+            "Description: Did you know that there are only 25 classic Tom & Jerry episodes that were displayed in a widescreen CinemaScope from the ...\n",
+            "Video ID: t0Q2otsqC4I\n",
+            "\n",
+            "Title: Cocomelon Color TRAIN The Wheels on The Bus + More Nursery Rhymes &amp; Kids Songs\n",
+            "Description: Cocomelon Color TRAIN The Wheels on The Bus + More Nursery Rhymes & Kids Songs Subscribe ...\n",
+            "Video ID: HIwskcLUQPw\n",
+            "\n",
+            "Title: PAW Patrol Halloween Best Spooky Rescue Episodes - PAW Patrol Cartoons for Kids Compilation\n",
+            "Description: The PAW Patrol are getting into costume to save trick or treaters, Rocky turns into a were-puppy, Rubble finds an alien twin, and ...\n",
+            "Video ID: isFrBq5ni6Q\n",
+            "\n",
+            "Title: Cocomelon Color Train - Wheels on the Train - Baby Nursery Rhymes\n",
+            "Description: Cocomelon Color Train - Wheels on the Train - Baby Nursery Rhymes Hop on board the Cocomelon Color Train and sing along to ...\n",
+            "Video ID: pjslXJZi4EQ\n",
+            "\n",
+            "Title: Chris and Magic Faucet Adventure - Kids toy stories\n",
+            "Description: Chris and Magic Faucet Adventure - Kids toy stories 00:00 Chris and Magic Faucet Adventure - Kids toy stories 05:44 Chris is ...\n",
+            "Video ID: S84fHUZdOGs\n",
+            "\n",
+            "Title: Tom &amp; Jerry | Tom &amp; Jerry in Full Screen | Classic Cartoon Compilation | WB Kids\n",
+            "Description: Did you know that there are only 25 classic Tom & Jerry episodes that were displayed in a widescreen CinemaScope from the ...\n",
+            "Video ID: t0Q2otsqC4I\n",
+            "\n",
+            "Title: Cocomelon Color TRAIN The Wheels on The Bus + More Nursery Rhymes &amp; Kids Songs\n",
+            "Description: Cocomelon Color TRAIN The Wheels on The Bus + More Nursery Rhymes & Kids Songs Subscribe ...\n",
+            "Video ID: HIwskcLUQPw\n",
+            "\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
